# tally-db-pipeline

./: .env.example  .gitignore  LIVE_VALIDATION_NOTES.md  PRODUCTION_GAP_LIST.md  README.md  RELIABILITY_PLAN.md  TECHNICAL_RESOURCES.md  pyproject.toml
scripts/: check_replay_counts.py  probe_alterid.py  probe_alterid_filter.py  probe_alterid_formulas.py  probe_alterid_nodate.py  replay_regression.sh
src/tally_db_pipeline/: audits.py  cli.py  config.py  daily_report.py  db.py  line_voucher.py  models.py  onedrive_client.py  parsers.py  policy.py  sync.py  tally_client.py
src/tally_db_pipeline/webapp/: README.md  main.py
src/tally_db_pipeline/webapp/static/: app.html  policies.html
src/tally_db_pipeline/webapp/templates/: app.html  base.html  consumption.html  entry.html  home.html  line_publish.html  list.html  model_specs.html  policies.html  print_summary.html  process_catalog.html  process_config_index.html  process_config_line.html  production_edit.html  production_entry.html  production_list.html  production_recent.html  production_review.html  production_summary.html  result.html  review.html  shift_presets.html
